make Weather details section responsive

--- a/components/WeatherDetails.css
+++ b/components/WeatherDetails.css
@@ -8,7 +8,17 @@
   gap: 12px;
   gap: 20px;
 }
+@media (max-width: 970px) {
+  .weather-details {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
+@media (max-width: 400px) {
+  .weather-details {
+    grid-template-columns: 1fr;
+  }
+}
 .weather-detail-box {
   display: flex;
   align-items: center;
@@ -33,9 +43,9 @@
 }
 
 .icon-weather-details svg {
-    width: 24px;
-    height: 24px;
-    color: hsl(var(--primary));
+  width: 24px;
+  height: 24px;
+  color: hsl(var(--primary));
 }
 
 .Details {
